fix some bugs (forget overflow-x in body and add intro-top-indicator

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16199,6 +16199,7 @@ html {
   scroll-behavior: smooth; }
 
 body {
+  overflow-x: hidden;
   color: black;
   background-color: #f5f5f5; }
 
@@ -17574,7 +17575,8 @@ a:hover {
       .intro__top-left-desc {
         font-size: 1.4rem; }
     .intro__top-right {
-      display: flex; }
+      display: flex;
+      position: relative; }
       .intro__top-right-container {
         display: flex; }
       .intro__top-right-img {
@@ -17604,6 +17606,19 @@ a:hover {
         letter-spacing: 0;
         padding: 2px 10px;
         margin-right: 10px; }
+    .intro__top-indicator {
+      color: #8099a7;
+      font-size: 1.2rem;
+      position: absolute;
+      bottom: -26px;
+      left: 50%;
+      transform: translateX(-50%); }
+      .intro__top-indicator-item {
+        padding: 5px;
+        margin-left: 5px;
+        cursor: pointer; }
+        .intro__top-indicator-item--active {
+          color: #007CC0; }
   .intro__bottom {
     display: flex;
     background-color: #00324F;
@@ -17704,7 +17719,7 @@ a:hover {
       font-size: 3.2rem; }
     .intro .intro__top-right-container {
       max-width: 100%;
-      padding-bottom: 10px;
+      padding-bottom: 8px;
       overflow-x: scroll;
       overflow-y: hidden; }
     .intro .intro__top-right-container img {
@@ -17979,7 +17994,7 @@ a:hover {
 
 @media screen and (max-width: 47.99875em) {
   .our-vehicles .our-vehicles-title {
-    padding-top: 55px; }
+    padding-top: 68px; }
   .our-vehicles .our-vehicles-carousel__inner-bgimg {
     height: 530px;
     object-position: top; }
