--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-    // overflow-x: hidden;
+    overflow-x: hidden;
     color: black;
     background-color: $color-gray;
 }
