--- a/assets/sass/pages/home/_our-vehicles-section.scss
+++ b/assets/sass/pages/home/_our-vehicles-section.scss
@@ -294,7 +294,7 @@
 @include responLessThan("md") {
     .our-vehicles {
         .our-vehicles-title {
-            padding-top: 55px;
+            padding-top: 68px;
         }
         .our-vehicles-carousel__inner-bgimg {
             height: 530px;
